<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog"
        android:text="@string/dialog" />
     <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressdialog"
        android:text="@string/progressdialog" />
      <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customdialog"
        android:text="@string/customdialog" />
       <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timedialog"
        android:text="@string/timedialog" />
          <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popupwindow"
        android:text="@string/popupwindow" />
     

</LinearLayout>