<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

     <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" 
         android:id="@+id/start"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ts" 
         android:id="@+id/ts"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop" 
        android:id="@+id/stop"
        />

</LinearLayout>