<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:background="#ffffff">
	 <RelativeLayout 
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_gravity="center_vertical"
	     android:id="@+id/relative_layout"
	     android:background="@drawable/local_popup_bg"
	     >
	    <!-- 左边 --> 
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	       android:orientation="vertical"
	        >
	        <ImageButton 
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:background="@drawable/img1" 
	           android:id="@+id/uninstall"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/uninstall"/>	        
	    </LinearLayout>	    
	     <!--中 --> 
	        <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	       android:orientation="vertical"
	       android:layout_centerInParent="true"
	        >
	        <ImageButton 
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:background="@drawable/img2" 
	           android:id="@+id/launch"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/launch"/>     
	    </LinearLayout>	     	          
	      <!-- 右--> 
	      <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	       android:orientation="vertical"
	       android:layout_alignParentRight="true"
	        >
	        <ImageButton 
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:background="@drawable/img3" 
	           android:id="@+id/share"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/share"/>     
	    </LinearLayout>      
	 </RelativeLayout>
</LinearLayout>